<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.westflix.main.home.HomeFragment"
        android:label="@string/tabHome"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.westflix.main.search.SearchFragment"
        android:label="@string/tabSearch"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.favorite.FavoriteFragment"
        android:label="@string/tabFavorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>
    <activity
        android:id="@+id/detailActivity"
        android:name="com.example.westflix.detail.DetailFilmActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail_film" />
</navigation>