<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailFilmActivity">

    <ImageView
        android:id="@+id/backdrop_detail"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/backdrop"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:src="@drawable/backdrop_light"
        app:layout_constraintTop_toTopOf="@id/backdrop_detail"
        app:layout_constraintBottom_toBottomOf="@id/backdrop_detail"
        app:layout_constraintStart_toStartOf="@id/backdrop_detail"
        app:layout_constraintEnd_toEndOf="@id/backdrop_detail"
        android:contentDescription="@string/backdrop"/>

    <ImageButton
        android:id="@+id/close_btn_detail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_close"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/poster_detail" />

    <ImageButton
        android:id="@+id/fav_btn_detail"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_favorite"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="@+id/close_btn_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/poster_detail"
        app:layout_constraintVertical_bias="0.533" />

    <ImageView
        android:id="@+id/poster_detail"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_marginTop="86dp"
        android:scaleType="centerCrop"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/poster" />

    <TextView
        android:id="@+id/title_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/poster_detail"/>

    <TextView
        android:id="@+id/overview_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="16dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_detail"/>

    <TextView
        android:id="@+id/release_date_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/release_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overview_detail" />

    <TextView
        android:id="@+id/detail_item_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/example_release_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/release_date_detail"
        app:layout_constraintStart_toEndOf="@id/release_date_detail"/>

    <TextView
        android:id="@+id/detail_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/rating_film_or_movie"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/release_date_detail" />

    <TextView
        android:id="@+id/detail_item_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_rating"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/detail_rating"
        app:layout_constraintStart_toStartOf="@id/detail_item_release_date"/>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:id="@+id/detail_pb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:indeterminateDrawable="@drawable/ic_baseline_loading_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/backdrop_detail"
        app:layout_constraintBottom_toBottomOf="@id/poster_detail"/>



</androidx.constraintlayout.widget.ConstraintLayout>

